Corrects header logo clipping

--- a/_sass/_navigation-header.scss
+++ b/_sass/_navigation-header.scss
@@ -45,7 +45,7 @@ $max-container: 1440px;
             float: left;
             font-size: 35px;
             font-weight: 700;
-            height: 36px;
+            height: 43px;
             margin: 10px;
             overflow: hidden;
             text-decoration: none;
